--- a/.gitignore
+++ b/.gitignore
@@ -43,9 +43,7 @@ db.sqlite3
 /staticfiles
 /venv
 *.env
-/backend/env
-/backend/venv
-/mlbackend/env
+*/venv
 /migrations/
 !*/migrations/__init__.py  # Keep __init__.py files
 # IDE and Editor files
