--- a/llm-stack-monitor-backend/backend/requirements.txt
+++ b/llm-stack-monitor-backend/backend/requirements.txt
@@ -1,18 +1,40 @@
-fastapi==0.115.12
-uvicorn==0.34.2
-sqlalchemy==2.0.41
-sqlmodel==0.0.24
-asyncpg==0.30.0
-passlib==1.7.4
-python-jose==3.4.0
-python-dotenv==1.1.0
-pydantic==2.11.5
-email_validator==2.2.0
-bcrypt==4.3.0
-
-# Optional but recommended for async concurrency & performance
+alembic==1.16.1
+annotated-types==0.7.0
 anyio==4.9.0
-uvloop==0.21.0
-
-# For testing/debugging
+async-timeout==5.0.1
+asyncpg==0.30.0
+bcrypt==4.3.0
+click==8.2.1
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+exceptiongroup==1.3.0
+fastapi==0.115.12
+greenlet==3.2.3
+h11==0.16.0
+idna==3.10
+Mako==1.3.10
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+passlib==1.7.4
+psycopg2==2.9.10
+pyasn1==0.4.8
+pydantic==2.11.5
+pydantic_core==2.33.2
+Pygments==2.19.1
+python-dotenv==1.1.0
+python-jose==3.4.0
+python-multipart==0.0.20
 rich==14.0.0
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+sqlmodel==0.0.24
+starlette==0.46.2
+tomli==2.2.1
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+uvicorn==0.34.2
+uvloop==0.21.0
